<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity.ItemEditActivity">

    <data>

        <variable
                name="activity"
                type="com.flyingyoo.flyinglist.activity.ItemEditActivity"/>
        <!--    <import
                    alias="View"
                    type="android.view.View"/>-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:clickable="true"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_3282e4"
                app:layout_constraintTop_toTopOf="parent">

            <include
                    android:id="@+id/view_close"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    layout="@layout/view_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:onClick="@{v -> activity.exit()}"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_date_info"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30dp"
                app:layout_constraintTop_toBottomOf="@id/cl_header"
                android:background="@color/color_999999"
        >

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintTop_toBottomOf="@id/cl_date_info"
                app:layout_constraintBottom_toTopOf="@id/tv_length"
                android:background="@null"
                android:padding="@dimen/_20dp"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:gravity="top|start"
                android:hint="@string/item_hint"
                android:textColor="@color/color_333333"
        />

        <TextView
                android:id="@+id/tv_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/ll_bottom"
                android:textColor="@color/color_999999"
                android:text="(0/300)"
                android:gravity="end"
                android:padding="@dimen/_10dp"
        />

        <LinearLayout
                android:id="@+id/ll_bottom"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent">

            <!--
                android:visibility='@{isModeUpdate ? View.GONE : View.VISIBLE}'
            -->

            <Button
                    android:id="@+id/btn_delete"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@null"
                    android:layout_width="@dimen/_0dp"
                    android:text="@string/delete"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_ff4848"
                    android:onClick="@{v -> activity.showDeleteDialog()}"
            />

            <Button
                    android:id="@+id/btn_confirm"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@null"
                    android:layout_width="@dimen/_0dp"
                    android:text="@string/confirm"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_3282e4"
                    android:onClick="@{v -> activity.confirmItem()}"
            />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>