<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".activity.EditItemActivity">

    <data>

        <variable
                name="activity"
                type="com.flyingyoo.flyinglist.activity.EditItemActivity"/>

        <variable
                name="item"
                type="com.flyingyoo.flyinglist.data.dto.ListItem"/>

        <import
                alias="View"
                type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:clickable="true"
    >

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_52dp"
                android:background="@color/color_3282e4"
                app:layout_constraintTop_toTopOf="parent">

            <include
                    android:id="@+id/view_close"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    layout="@layout/view_close"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:onClick="@{v -> activity.onBackPressed()}"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_date_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cl_header">

            <TextView
                    android:id="@+id/tv_view_cnt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="@id/tv_create_date"
                    app:layout_constraintStart_toStartOf="parent"
                    android:padding="@dimen/_5dp"
                    android:textColor="@color/color_999999"
                    android:singleLine="true"
                    android:maxLines="1"

            />

            <TextView
                    android:id="@+id/tv_create_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/tv_edit_date"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:gravity="center_vertical|end"
                    android:padding="@dimen/_5dp"
                    android:textColor="@color/color_333333"
                    android:singleLine="true"
                    android:maxLines="1"
            />

            <TextView
                    android:id="@+id/tv_edit_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:gravity="center_vertical|end"
                    android:padding="@dimen/_5dp"
                    android:visibility='@{item.editedTime == 0L ? View.GONE : View.VISIBLE}'
                    android:textColor="@color/color_333333"
                    android:singleLine="true"
                    android:maxLines="1"
            />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_0dp"
                app:layout_constraintTop_toBottomOf="@id/cl_date_info"
                app:layout_constraintBottom_toTopOf="@id/tv_length"
                android:background="@null"
                android:padding="@dimen/_20dp"
                android:inputType="textMultiLine"
                android:maxLength="300"
                android:gravity="top|start"
                android:hint="@string/item_hint"
                android:textColor="@color/color_333333"
                android:layout_marginBottom="@dimen/_5dp"
        />

        <TextView
                android:id="@+id/tv_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/chk_completed"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/color_999999"
                android:text="(0/300)"
                android:layout_marginEnd="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_5dp"
        />

        <CheckBox
                android:id="@+id/chk_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_completed"
                android:checked="@{item.completed}"
                android:paddingBottom="@dimen/_3dp"
                android:layout_marginEnd="@dimen/_10dp"
                app:layout_constraintBottom_toTopOf="@id/ll_bottom"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <LinearLayout
                android:id="@+id/ll_bottom"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent">

            <!--
                android:visibility='@{isModeUpdate ? View.GONE : View.VISIBLE}'
            -->

            <Button
                    android:id="@+id/btn_delete"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@null"
                    android:layout_width="@dimen/_0dp"
                    android:text="@string/delete"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_ff4848"
                    android:onClick="@{v -> activity.showDeleteDialog()}"
            />

            <Button
                    android:id="@+id/btn_confirm"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:background="@null"
                    android:layout_width="@dimen/_0dp"
                    android:text="@string/confirm"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/color_3282e4"
                    android:onClick="@{v -> activity.confirmItem()}"
            />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>